--- a/css/panel.css
+++ b/css/panel.css
@@ -708,3 +708,20 @@
   .border-naranja-xico {
     border-color: #f18103!important;
 }
+
+.enlace-admin:hover {
+  text-decoration: none;
+}
+
+.tarjeta {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+}
+.tarjeta:hover {
+  box-shadow: 0 8px 16px 0 rgba(248,115,6,0.5);
+  border-color: #f18103;  
+}
+.inline-btn {
+  display: inline-block;
+}
